// ============================================================
// CD3 Blockchain Auction Platform — Prisma Schema
// Phiên bản: 3.0 — P1 Consensus sync (2026-05-09)
// Audit ref: docs/artifacts/final_consensus_direction.md
// Changes: AWAITING_SHIPMENT, FORFEITED, ShippingPayer, buyNowPrice, shipping economics
// ============================================================

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ============================================================
// ENUMS
// ============================================================

enum KycStatus {
  NONE
  PENDING
  APPROVED
  REJECTED
}

enum Role {
  USER
  ADMIN
}

enum EscrowStatus {
  NONE
  // Gap DB-1 (Kiro/Antigravity): AWAITING_SHIPMENT thiếu — mirror EscrowStatus.AwaitingShipment on-chain
  // Cần cho seller dashboard hiển thị task "cần ship hàng" và phân biệt pha chờ ship vs chờ confirm
  AWAITING_SHIPMENT
  AWAITING_DELIVERY
  DISPUTED
  COMPLETED
  REFUNDED
}

// DB-AM-06: type-safe category (DES-03: enum > FK cho scope đồ án)
enum AuctionCategory {
  ELECTRONICS
  FASHION
  FURNITURE
  COLLECTIBLES
  OTHER
}

// DB-AM-02: off-chain status mirror — đồng bộ canonical state BA Audit A-01
enum AuctionStatus {
  PENDING    // TX createAuction chưa confirmed on-chain
  UPCOMING   // Đã lên chuỗi, nhưng startTime > now
  ACTIVE     // Đang nhận bid
  ENDED      // Hết giờ, chờ claim/shipping
  CANCELED   // Hủy (chưa có bid hoặc bị admin cancel)
  // Consensus C-04: FORFEITED phân biệt với CANCELED — Winner default sau khi thắng
  // Dùng để Admin filter abuse pattern, Seller biết lý do auction kết thúc
  FORFEITED  // Winner gọi forfeitWin() — đã chịu penalty 10%
}

// Consensus C-02 (Shipping Economics): Người trả phí vận chuyển — off-chain metadata
// Contract không thay đổi payout logic; field này chỉ dùng cho UI display
enum ShippingPayer {
  BUYER    // Buyer total = winningBid + shippingCost; seller net = winningBid - platformFee
  SELLER   // Buyer total = winningBid; seller net = winningBid - platformFee - shippingCost
}

// DB-SL-02: bổ sung CONFIRMED, CANCELED; DB-SL-05: remove DISPUTED khỏi shipping domain
enum ShippingStatus {
  PENDING     // Auction kết thúc, chờ người bán gửi hàng
  SHIPPED     // Người bán đã gửi (confirmShipped)
  CONFIRMED   // Người mua xác nhận nhận hàng
  CANCELED    // Hủy do dispute giải quyết bằng REFUNDED
}

// Outcome của dispute — đồng bộ smart contract resolveDispute(uint256 _buyerRefundPercentage)
// DB dùng binary outcome (BUYER_WIN/SELLER_WIN) để đơn giản hóa off-chain log;
// percentage thực tế được lưu trong DisputeLog.resolution (text) nếu cần
enum DisputeOutcome {
  BUYER_WIN  // refundBuyer = true
  SELLER_WIN // refundBuyer = false
}

enum NotificationType {
  INFO
  SUCCESS
  WARNING
  ERROR
}

// ============================================================
// MODELS
// ============================================================

// ---- User ----
model User {
  id               String    @id @default(uuid())
  walletAddress    String    @unique @map("wallet_address")
  displayName      String?   @map("display_name")
  // DB-U-03: giữ avatarUrl (DES-02) cho phép cả S3 + IPFS gateway URL
  avatarUrl        String?   @map("avatar_url")
  kycStatus        KycStatus @default(NONE) @map("kyc_status")
  role             Role      @default(USER)
  // DB-U-04: Admin có thể suspend account
  isActive         Boolean   @default(true) @map("is_active")
  // DB-U-02: KYC audit trail — ai duyệt, lúc nào
  kycApprovedAt    DateTime? @map("kyc_approved_at")
  kycApprovedBy    String?   @map("kyc_approved_by") // walletAddress của Admin
  // DB-U-01: soft delete — giữ audit trail, không xóa vật lý
  deletedAt        DateTime? @map("deleted_at")
  oldName          String?   @map("old_name")
  address1         String?   @map("address_1")
  address2         String?   @map("address_2")
  lastAddressUpdate DateTime? @map("last_address_update")
  createdAt        DateTime  @default(now()) @map("created_at")
  updatedAt        DateTime  @updatedAt @map("updated_at")

  // Relations
  auctions         AuctionMetadata[] @relation("SellerAuctions")
  wonAuctions      AuctionMetadata[] @relation("WonAuctions")
  // DB-U-05: User là Bidder
  bids             Bid[]
  // Disputes raised bởi user này
  raisedDisputes   DisputeLog[]      @relation("DisputeRaiser")
  // Disputes resolved bởi Admin
  resolvedDisputes DisputeLog[]      @relation("DisputeResolver")
  // Admin action log
  adminActions     AdminActionLog[]  @relation("AdminActions")
  // Shipping logs user là người cập nhật
  shippingUpdates  ShippingLog[]     @relation("ShippingUpdater")
  // KYC Request
  kycRequest       KycRequest?       @relation("UserKycRequest")
  // Watchlist
  watchlist        Watchlist[]
  // Notifications
  notifications    Notification[]
  // Chat Conversations
  sentMessages     Message[]         @relation("SentMessages")
  conversations1   Conversation[]    @relation("Participant1")
  conversations2   Conversation[]    @relation("Participant2")
  // Activity logs
  activities       UserActivity[]
  // Follows
  followers        Follow[]          @relation("UserFollowing")
  following        Follow[]          @relation("UserFollowers")

  // DB-IDX-01: Admin filter by KYC status
  @@index([kycStatus])
  @@map("users")
}

// ---- UserActivity ----
// Lưu vết mọi hành động quan trọng của người dùng (Place bid, create auction, v.v.)
model UserActivity {
  id         String   @id @default(uuid())
  userId     String   @map("user_id")
  // "BID_PLACED", "AUCTION_CREATED", "PROFILE_UPDATED", "FOLLOW_USER", etc.
  action     String
  // ID của entity bị tác động (auctionId, targetUserId, etc.)
  targetId   String?  @map("target_id")
  // Loại entity: "AUCTION", "USER", "BID", etc.
  targetType String?  @map("target_type")
  // Metadata bổ sung dạng JSON (giá trị bid, data cũ/mới...)
  metadata   Json?
  ipAddress  String?  @map("ip_address")
  createdAt  DateTime @default(now()) @map("created_at")

  user       User     @relation(fields: [userId], references: [id])

  @@index([userId, createdAt(sort: Desc)])
  @@index([targetType, targetId])
  @@map("user_activities")
}

// ---- Follow ----
// Mối quan hệ N-M tự thân (Self-referential) để người dùng theo dõi nhau
model Follow {
  followerId  String   @map("follower_id")
  followingId String   @map("following_id")
  createdAt   DateTime @default(now()) @map("created_at")

  follower    User     @relation("UserFollowers", fields: [followerId], references: [id])
  following   User     @relation("UserFollowing", fields: [followingId], references: [id])

  @@id([followerId, followingId])
  @@map("follows")
}

// ---- Conversation ----
model Conversation {
  id             String    @id @default(uuid())
  participant1Id String    @map("participant_1_id")
  participant2Id String    @map("participant_2_id")
  createdAt      DateTime  @default(now()) @map("created_at")
  updatedAt      DateTime  @updatedAt @map("updated_at")

  participant1   User      @relation("Participant1", fields: [participant1Id], references: [id])
  participant2   User      @relation("Participant2", fields: [participant2Id], references: [id])
  messages       Message[]

  @@unique([participant1Id, participant2Id])
  @@map("conversations")
}

// ---- Message ----
model Message {
  id             String       @id @default(uuid())
  conversationId String       @map("conversation_id")
  senderId       String       @map("sender_id")
  content        String       @db.Text
  isRead         Boolean      @default(false) @map("is_read")
  createdAt      DateTime     @default(now()) @map("created_at")

  conversation   Conversation @relation(fields: [conversationId], references: [id])
  sender         User         @relation("SentMessages", fields: [senderId], references: [id])

  @@index([conversationId, createdAt(sort: Desc)])
  @@map("messages")
}

// ---- KycRequest ----
model KycRequest {
  id              String    @id @default(uuid())
  userId          String    @unique @map("user_id") // 1-1 relation with User for current active/pending request
  fullName        String    @map("full_name")
  idNumber        String    @unique @map("id_number")
  dateOfBirth     DateTime  @map("date_of_birth")
  address         String?
  // Multi-document support: Front ID, Back ID, Selfie
  frontIdUrl      String?   @map("front_id_url")
  backIdUrl       String?   @map("back_id_url")
  selfieUrl       String?   @map("selfie_url")
  status          KycStatus @default(PENDING)
  rejectionReason String?   @map("rejection_reason")
  createdAt       DateTime  @default(now()) @map("created_at")
  updatedAt       DateTime  @updatedAt @map("updated_at")

  user            User      @relation("UserKycRequest", fields: [userId], references: [id])

  @@map("kyc_requests")
}

// ---- AuctionMetadata ----
model AuctionMetadata {
  id                String          @id @default(uuid())
  sellerId          String          @map("seller_id")
  // DB-AM-01: EVM uint256 auction ID — BigInt đủ cho auction counter on Sepolia
  onChainAuctionId  BigInt?         @unique @map("on_chain_auction_id")
  // DB-AM-02: off-chain status mirror
  status            AuctionStatus   @default(PENDING) @map("status")
  escrowStatus      EscrowStatus    @default(NONE) @map("escrow_status")
  title             String
  // DB-AM-08: Text type cho long description
  description       String          @db.Text
  ipfsCid           String?         @map("ipfs_cid")
  // DB-AM-06: type-safe category
  category          AuctionCategory @default(OTHER)
  // DB-AM-03: giá khởi điểm — String để tránh precision loss uint256 → JSON
  startingPriceWei  String          @map("starting_price_wei")
  // DB-AM-05: collateral (escrow đặt cọc)
  collateralWei     String          @map("collateral_wei")
  // DB-AM-03: thời gian bắt đầu, kết thúc và duration
  startTime         DateTime        @default(now()) @map("start_time")
  endTime           DateTime        @map("end_time")
  durationSeconds   Int             @map("duration_seconds")
  // DB-AM-04: người thắng cuộc (set sau khi auction kết thúc)
  winnerId          String?         @map("winner_id")
  // DB-AM-07: TX hash của `createAuction` để trace on-chain
  createTxHash      String?         @unique @map("create_tx_hash")

  // Consensus C-01 (Buy Now Price): Ngưỡng giá "Mua Ngay" — NULL = disabled
  // Sync với buyNowPrice trong Auction struct on-chain
  // Khi bid >= buyNowPrice, auction tự kết thúc ngay lập tức
  buyNowPriceWei    String?         @map("buy_now_price_wei")

  // Consensus C-02 (Shipping Economics): Chi phí vận chuyển — off-chain metadata only
  // Contract không xử lý; UI dùng để hiển thị tổng chi phí ước tính cho buyer
  shippingCostWei   String          @default("0") @map("shipping_cost_wei")
  shippingPayer     ShippingPayer   @default(BUYER) @map("shipping_payer")

  createdAt         DateTime        @default(now()) @map("created_at")
  updatedAt         DateTime        @updatedAt @map("updated_at")

  // Relations
  seller            User            @relation("SellerAuctions", fields: [sellerId], references: [id])
  winner            User?           @relation("WonAuctions", fields: [winnerId], references: [id])
  // DB-AM-09
  bids              Bid[]
  // DB-AM-10
  disputes          DisputeLog[]
  shippingLogs      ShippingLog[]
  // Watchlist
  watchers          Watchlist[]

  // DB-IDX-01
  @@index([sellerId, createdAt(sort: Desc)])
  @@index([status, endTime])
  @@map("auction_metadata")
}

// ---- Bid — DB-MISS-01 [CRITICAL] ----
model Bid {
  id          String   @id @default(uuid())
  auctionId   String   @map("auction_id")
  bidderId    String   @map("bidder_id")
  // DES-01: Wei amount dạng decimal String — uint256-safe, không mất precision JSON
  amountWei   String   @map("amount_wei")
  // txHash là dedup key — cùng TX không được insert 2 lần
  txHash      String   @unique @map("tx_hash")
  blockNumber BigInt?  @map("block_number")
  // Flag bid cuối cùng (winning) — update khi auction ENDED
  isWinning   Boolean  @default(false) @map("is_winning")
  createdAt   DateTime @default(now()) @map("created_at")

  auction     AuctionMetadata @relation(fields: [auctionId], references: [id])
  bidder      User            @relation(fields: [bidderId], references: [id])

  // DB-IDX-01: Bid history của 1 auction theo thứ tự mới nhất
  @@index([auctionId, createdAt(sort: Desc)])
  // "My Bids" — lịch sử đấu giá của user
  @@index([bidderId])
  @@map("bids")
}

// ---- ShippingLog ----
model ShippingLog {
  id           String         @id @default(uuid())
  auctionId    String         @map("auction_id")
  status       ShippingStatus
  // DB-SL-01: FK thay vì String tự do — referential integrity
  updatedById  String         @map("updated_by_id")
  // DB-SL-04: ghi chú thêm (tracking number, ghi chú giao vận)
  notes        String?        @db.Text
  // Consensus C-02 (Shipping Economics): Mock logistics metadata — không có on-chain equivalent
  // carrierName + trackingCode làm phong phú thêm mock logistics cho prototype/demo
  carrierName  String?        @map("carrier_name")
  trackingCode String?        @map("tracking_code")
  // DB-SL-03: đây là log record (immutable), đặt tên createdAt cho đúng semantics
  createdAt    DateTime       @default(now()) @map("created_at")

  auction      AuctionMetadata @relation(fields: [auctionId], references: [id])
  updatedBy    User            @relation("ShippingUpdater", fields: [updatedById], references: [id])

  @@index([auctionId])
  @@map("shipping_logs")
}

// ---- AuthNonce — DB-MISS-02 [CRITICAL] SIWE ----
// Chống replay attack cho Sign-In With Ethereum (EIP-4361)
// Nonce là single-use, có TTL. DES-04: dùng PostgreSQL, không cần Redis infra thêm.
model AuthNonce {
  id            String    @id @default(uuid())
  walletAddress String    @map("wallet_address")
  nonce         String    @unique
  expiresAt     DateTime  @map("expires_at") // TTL: 5-10 phút từ lúc issue
  usedAt        DateTime? @map("used_at")    // Mark sau khi verify thành công
  createdAt     DateTime  @default(now()) @map("created_at")

  @@index([walletAddress])
  // Cleanup job scan record hết hạn để DELETE
  @@index([expiresAt])
  @@map("auth_nonces")
}

// ---- DisputeLog — DB-MISS-03 [CRITICAL] ----
// Audit trail tranh chấp — Admin nghe trình bày off-chain, ghi nhận resolution
model DisputeLog {
  id            String          @id @default(uuid())
  auctionId     String          @map("auction_id")
  raisedById    String          @map("raised_by_id")
  resolvedById  String?         @map("resolved_by_id") // Admin xử lý
  reason        String          @db.Text
  resolution    String?         @db.Text  // Ghi chú quyết định của Admin
  outcome       DisputeOutcome?           // NULL khi đang pending
  // TX hash của resolveDispute() on-chain
  resolveTxHash String?         @unique @map("resolve_tx_hash")
  raisedAt      DateTime        @default(now()) @map("raised_at")
  resolvedAt    DateTime?       @map("resolved_at")

  auction       AuctionMetadata @relation(fields: [auctionId], references: [id])
  raisedBy      User            @relation("DisputeRaiser", fields: [raisedById], references: [id])
  resolvedBy    User?           @relation("DisputeResolver", fields: [resolvedById], references: [id])

  @@index([auctionId])
  @@map("dispute_logs")
}

// ---- AdminActionLog — DB-MISS-04 [HIGH] ----
// Forensics audit trail — mọi admin action phải được ghi lại
// Không sửa được sau khi insert (append-only by convention)
model AdminActionLog {
  id         String   @id @default(uuid())
  adminId    String   @map("admin_id")
  // Ví dụ: "APPROVE_KYC", "RESOLVE_DISPUTE", "SUSPEND_USER", "CANCEL_AUCTION"
  action     String
  // ID của entity bị tác động (userId, auctionId, disputeId...)
  targetId   String   @map("target_id")
  // Loại entity: "USER", "AUCTION", "DISPUTE"
  targetType String   @map("target_type")
  // Metadata bổ sung dạng JSON (reason, trạng thái trước/sau...)
  metadata   Json?
  ipAddress  String?  @map("ip_address")
  createdAt  DateTime @default(now()) @map("created_at")

  admin      User     @relation("AdminActions", fields: [adminId], references: [id])

  @@index([adminId])
  // Query: "Tất cả action liên quan đến User X"
  @@index([targetType, targetId])
  @@map("admin_action_logs")
}

// ---- Notification ----
model Notification {
  id        String           @id @default(uuid())
  userId    String           @map("user_id")
  type      NotificationType @default(INFO)
  title     String
  message   String
  actionUrl String?          @map("action_url")
  isRead    Boolean          @default(false) @map("is_read")
  createdAt DateTime         @default(now()) @map("created_at")

  user User @relation(fields: [userId], references: [id])

  @@index([userId, createdAt(sort: Desc)])
  @@map("notifications")
}

// ---- Watchlist ----
model Watchlist {
  userId    String   @map("user_id")
  auctionId String   @map("auction_id")
  createdAt DateTime @default(now()) @map("created_at")

  user    User            @relation(fields: [userId], references: [id])
  auction AuctionMetadata @relation(fields: [auctionId], references: [id])

  @@id([userId, auctionId])
  @@map("watchlists")
}
